src/test/ui/parser/attr-bad-meta-2.stderr
error: unexpected token: `]`
  --> $DIR/attr-bad-meta-2.rs:3:8
   |
LL | #[path =] //~ ERROR unexpected token: `]`
   |        ^

error: aborting due to previous error

